Andrea Pennington transcript

--- a/2021-02-26-become-who-you-really-are.org
+++ b/2021-02-26-become-who-you-really-are.org
@@ -14,305 +14,266 @@ tags: [become, yourself, vocabulary]
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
 
+This is the [[https://www.youtube.com/watch?v=5pW2b1vwwf4][source.]]
 
-I am obsessed with transformation,
-specifically how dreams in the head and heart
-are transformed into physical reality.
-For the last two decades,
-I have reverse-engineered peak performance behavior
-and hacked motivation
-to empower people to transform their lives and their business
-in honor of their dreams and passions.
-So whether it's starting a new business or relationship
-to building a better brain or body,
-how many of you out there
-feel that you have the potential to do something great in life?
-Alright.
-Well, Marianne Williamson once said,
-"If you feel like you're wasting your life's potential, you are."
-The truth is you have far more power
-over your physical well-being and your impact in life
-than you give yourself credit for.
-Over the last several years as a documentary filmmaker,
-I have immersed myself in cultures around the world
-to see what it takes to really thrive and flourish.
-What I noticed is, in many cultures like in the Western world,
-when we set out in life, most of us are programmed to fit into social norms.
-In business, we look to the marketplace to compete for better sameness.
-And when we suffer, physically or emotionally,
-most of us look outside of ourselves for the cause and the cure.
-The shift for me came in my final year of medical school,
-when I started the study of traditional Chinese medicine and acupuncture.
-I learned that people could have heart and brain surgery
-while awake without anesthesia.
-Women could deliver their babies painlessly,
-and people could recover from drug addiction and craving
-with a few tiny, well-placed needles.
-I realized there was more to the body and mind
+I am obsessed with transformation, specifically how dreams in the head
+and heart are transformed into physical reality. For the last two
+decades, I have reverse-engineered peak performance behavior and
+hacked motivation to empower people to transform their lives and their
+business in honor of their dreams and passions.
+
+So whether it's starting a new business or relationship to building a
+better brain or body, how many of you out there feel that you have the
+potential to do something great in life? Alright. Well, Marianne
+Williamson once said, "If you feel like you're wasting your life's
+potential, you are."
+
+The truth is you have far more power over your physical well-being and
+your impact in life than you give yourself credit for. Over the last
+several years as a documentary filmmaker, I have immersed myself in
+cultures around the world to see what it takes to really thrive and
+flourish. What I noticed is, in many cultures like in the Western
+world, when we set out in life, most of us are programmed to fit into
+social norms. In business, we look to the marketplace to compete for
+better sameness. And when we suffer, physically or emotionally, most
+of us look outside of ourselves for the cause and the cure.
+
+The shift for me came in my final year of medical school, when I
+started the study of traditional Chinese medicine and acupuncture. I
+learned that people could have heart and brain surgery while awake
+without anesthesia. Women could deliver their babies painlessly, and
+people could recover from drug addiction and craving with a few tiny,
+well-placed needles. I realized there was more to the body and mind
 than what the American medical system was teaching me.
-I came to understand
-that our programmed beliefs about ourselves and our place in the world
-dictate a large part of our health and happiness
-as well as our level of success.
-Now the challenge is:
-our concept of self is often inauthentic or weak.
-To transform what you see on the outside,
-you've got to transform who you are on the inside.
-In the next few minutes, I will summarize the soul and science of my work
-to leave you with three vital keys
-to unlock your potential for transformation.
-It's a simple prescription really,
-one small shift that can yield big results.
-I'll even tell it to you now:
-Become who you really are.
-When you look yourself in the mirror, past the makeup or blemishes,
-do you ever sense that there's more to you than what you see in your reflection?
+
+I came to understand that our programmed beliefs about ourselves and
+our place in the world dictate a large part of our health and
+happiness as well as our level of success. Now the challenge is: our
+concept of self is often inauthentic or weak. To transform what you
+see on the outside, you've got to transform who you are on the inside.
+In the next few minutes, I will summarize the soul and science of my
+work to leave you with three vital keys to unlock your potential for
+transformation.
+
+It's a simple prescription really, one small shift that can yield big
+results. I'll even tell it to you now: Become who you really are. When
+you look yourself in the mirror, past the makeup or blemishes, do you
+ever sense that there's more to you than what you see in your
+reflection?
+
 So who are you really?
-When asked, "Who are you?",
-most people respond with their age,
-ethnic background, job or position in life.
-Why?
-Because we've all been programmed.
-The programming of your self-image and how you describe yourselves to others
-begins in childhood.
-As author and biologist, Bruce Lipton, so passionately explains,
-during the first six years of our lives,
-our brains exist in a hypnotic, trance-like state,
-such that we passively absorb, record and believe
-the things that are impressed upon us from the outside world.
-From birth,
-the socialization process shapes our sense of self-identity,
-and little by little a social mask is formed,
-and we behave according to the rules of our family or religion:
-we adopt the cultural, political and gender norms that are thrust upon us,
-causing most of us to lose sight of and compromise who we really are.
-The sad thing is
-most of us end up forcing the unacceptable parts of our personality into the shadows,
-and we end up masquerading as a half-baked version of ourselves,
-we embrace the qualities of our peers or the ideals of our parents,
-all in an attempt to fit in and be accepted.
-Meanwhile, the authentic, original you,
-that glimmer you see reflected deep in your eyes,
-takes a back seat.
-Often we don't realize who we are meant to be
-because we're so busy trying to live out someone else's ideas.
-But what if who you thought you were is wrong?
-What if, by being your most authentic perfectly imperfect self,
-you could transform your health and your life
-while having an extraordinary impact in the world?
-You know, the challenges that our world faces today,
-from economic collapse, crumbling political regimes,
-environmental crises and global health problems,
-we need new solutions, not rehashed versions of old thinking.
-Einstein said:
-No problem can be solved from the same level of consciousness that created it.
-In 2010, IBM conducted a study of CEOs around the world.
-60% of these CEOs said that creativity
-is the most important leadership quality for success in business.
-So, you see, we need people
-who will be creative enough to think outside of the box,
-those who are bold enough to go for their dreams,
-and those who are free enough to be truly themselves.
-That's from whence that creative spark of genius often comes.
-A Greek philosopher believed that we have a telos,
-a purpose or an end toward which we are pointed.
-And - that end is the self.
-And the best life, says Aristotle,
-is spent trying to understand what that self is,
-and to become it.
-And that's what people who want to transform the world need to hear:
-Become who you are.
-Now, that's also the title of one of the positive psychology courses
-I teach here at IUM in the business school.
-One of the first assignments is to research the class title.
-Now, many people have heard "Become Who You Are,"
-or they've seen it in online social networks,
-these cute little postcards,
-Most often, the phrase is attributed to Friedrich Nietzsche.
-But Nietzsche was actually quoting Pindar, the lyric poet.
-Upon further research,
-we see that Pindar's line, when accurately translated from the ancient Greek, reads:
-"Become such as you are, having learned what that is."
-So you see, your first key to becoming who you really are,
-is to learn who you really are.
-So how do you do that?
-Shift your focus inward.
-Question your thoughts and beliefs.
-Seek to rediscover your true self through inquiry, contemplation, yoga.
-Or, as Matthieu Ricard said, through meditation.
-Now, one way that you can see
-what is truly you and not just programming
-is to look at your biology.
-Dr C Robert Cloninger from my alma mater,
-the Washington University School of Medicine,
-developed the TCI.
-The TCI is the temperament and character inventory.
-You take it to learn what your true personality traits are
-that have come from your family,
-those aspects of our personality that are actually transmitted in the DNA.
-It is a good place to start,
-but as you've heard today,
-your biology doesn't limit you, it's just a starting point.
-Next, look at your positive traits and talents.
-Now, we all have a variety of strengths, abilities and resources,
-but they don't reflect who you are at your core.
+
+When asked, "Who are you?", most people respond with their age, ethnic
+background, job or position in life. Why? Because we've all been
+programmed. The programming of your self-image and how you describe
+yourselves to others begins in childhood. As author and biologist,
+Bruce Lipton, so passionately explains, during the first six years of
+our lives, our brains exist in a hypnotic, trance-like state, such
+that we passively absorb, record and believe the things that are
+impressed upon us from the outside world.
+
+From birth, the socialization process shapes our sense of
+self-identity, and little by little a social mask is formed, and we
+behave according to the rules of our family or religion: we adopt the
+cultural, political and gender norms that are thrust upon us, causing
+most of us to lose sight of and compromise who we really are. The sad
+thing is most of us end up forcing the unacceptable parts of our
+personality into the shadows, and we end up masquerading as a
+half-baked version of ourselves, we embrace the qualities of our peers
+or the ideals of our parents, all in an attempt to fit in and be
+accepted.
+
+Meanwhile, the authentic, original you, that glimmer you see reflected
+deep in your eyes, takes a back seat. Often we don't realize who we
+are meant to be because we're so busy trying to live out someone
+else's ideas. But what if who you thought you were is wrong? What if,
+by being your most authentic perfectly imperfect self, you could
+transform your health and your life while having an extraordinary
+impact in the world?
+
+You know, the challenges that our world faces today, from economic
+collapse, crumbling political regimes, environmental crises and global
+health problems, we need new solutions, not rehashed versions of old
+thinking.
+
+   -----
+   #+BEGIN_QUOTE
+    “No problem can be solved from the same level of consciousness
+    that created it.”
+
+    — *Albert Einstein*
+   #+END_QUOTE
+   -----
+
+Einstein said: No problem can be solved from the same level
+of consciousness that created it. In 2010, IBM conducted a study of
+CEOs around the world. 60% of these CEOs said that creativity is the
+most important leadership quality for success in business. So, you
+see, we need people who will be creative enough to think outside of
+the box, those who are bold enough to go for their dreams, and those
+who are free enough to be truly themselves.
+
+That's from whence that creative spark of genius often comes. A Greek
+philosopher believed that we have a telos, a purpose or an end toward
+which we are pointed. And - that end is the self. And the best life,
+says Aristotle, is spent trying to understand what that self is, and
+to become it. And that's what people who want to transform the world
+need to hear: Become who you are.
+
+Now, that's also the title of one of the positive psychology courses I
+teach here at IUM in the business school. One of the first assignments
+is to research the class title. Now, many people have heard "Become
+Who You Are," or they've seen it in online social networks, these cute
+little postcards, most often, the phrase is attributed to Friedrich
+Nietzsche. But Nietzsche was actually quoting Pindar, the lyric poet.
+Upon further research, we see that Pindar's line, when accurately
+translated from the ancient Greek, reads: "Become such as you are,
+having learned what that is."
+
+So you see, your first key to becoming who you really are, is to learn
+who you really are. So how do you do that? Shift your focus inward.
+Question your thoughts and beliefs. Seek to rediscover your true self
+through inquiry, contemplation, yoga. Or, as Matthieu Ricard said,
+through meditation. Now, one way that you can see what is truly you
+and not just programming is to look at your biology. Dr C Robert
+Cloninger from my alma mater, the Washington University School of
+Medicine, developed the TCI.
+
+The TCI is the temperament and character inventory. You take it to
+learn what your true personality traits are that have come from your
+family, those aspects of our personality that are actually transmitted
+in the DNA. It is a good place to start, but as you've heard today,
+your biology doesn't limit you, it's just a starting point. Next, look
+at your positive traits and talents. Now, we all have a variety of
+strengths, abilities and resources, but they don't reflect who you are
+at your core.
+
 But your character strengths are those aspects of your personality
-that make you unique, feel engaged,
-and actually make you feel like life is worth living.
-You can learn about your character strengths
-by taking the VIA survey.
-This was developed under the guidance of Dr Martin Seligman.
-While studying applied positive psychology,
-he taught me
-that when we use our signature strengths more in our daily life,
-we can achieve authentic happiness,
-create more flow,
-and a feeling that what we do in life matters.
-When you feel that life has meaning and purpose,
-you take your better care of yourself.
-You will express yourself more freely,
-and ...
-you really start to feel happy and hopeful.
-And these positive emotions and optimism
-go a long way towards setting you up for success, better health and longevity.
-In fact, a Dutch men's study
-found that optimism alone could decrease all types of mortality
-and, in particular, death from heart disease,
-as did the Women's Health Initiative.
-So, this type of optimism is critical.
-I can tell you from personal experience
-that denying your self-expression can actually lead to depression.
-For most of my life, I have traveled two parallel paths.
-By training I am a scientist, but by passion I'm an artist.
-My mother encouraged me to boldly go onstage on television
-and to play music.
-But it wasn't that she pushed me into the arts,
-it was our home environment that shaped my decision.
-Children ought to be seen, not heard.
-This was one of those leftover Victorian ideals from England,
-where my mother grew up.
-But when I was on stage, I felt free to finally express myself.
-And by performing, I could naturally get into the zone and that flow state.
-Now, my father's influence was equally impressive.
-He told me that only one in a million artists
-can make it in the world
-so go to school and get an education.
-I wanted to keep my father happy,
-so I sacrificed my biggest passion for performing
-to become a doctor.
-And, for the most part, I was miserable.
-So what if the way you've molded yourself,
-or allowed others to shape you,
-was based on false information?
-If you're always trying to be normal, you'll never know how amazing you can be.
-And may she rest in peace.
-During the first ten years of my medical practice,
-I discovered that no matter how many acupuncture needles,
-medications, surgeries, or even psychotherapy given,
-some people just wouldn't get better.
-Or worse, they'd get better,
-and then come down with some other illness or addiction.
-When I asked why and probed deeper,
-I discovered that some of them didn't love and accept themselves.
-They didn't value their lives,
-and they didn't even feel that they deserved good health and happiness.
-Somehow that felt very familiar to me.
-When we are coerced to be something that we are not,
-or forced to pursue goals that are not of our own choosing,
-we often take on the beliefs of others
-that can literally cause our own self-rejection and self-loathing.
-Now I did use my on-camera skills
-to work successfully with some of the largest media brands in the world.
-But the persona that we created
-was not authentically aligned with who I really was.
-I didn't feel comfortable with my pseudocelebrity status,
-and I even started to hide some of my success
-because I hated the image that we created.
-I also hid my sadness,
-smiling on the cover of magazines and doing talk-show interviews,
-I wore a happy mask ...
-while internally I suffered.
-Now, that subset of patients that lacked self-love
-was actually a mirror to what I was experiencing.
-When we don't utilize or live up to our full potential,
-we risk becoming hopeless and depressed.
-We may be functional, but not fulfilled;
-we may be successful, but not satisfied.
-To numb our pain we often overeat, overdrink, overachieve or shop.
-But we're not the only ones who suffer in that scenario.
-We have a profound impact on the people around us,
-our co-workers, our romantic partners and especially our children.
-The very ones who could and should benefit from our unique gifts
-are deprived of the beauty of our talents.
-Takes a lot of courage to grow up and become who you really are.
-This sort of practiced conformity
-can make it very difficult, and even scary, to live your truth.
-Often we're paralyzed by fear, or so racked with pain,
-that we feel like we just can't go on.
-And that's what happened in my case.
-Now, I don't recommend it,
-but hitting rock bottom can be a blessing in disguise.
-Our very own downfall can propel us
-to new heights of self-expression and self-acceptance.
-For me, my rock bottom came in 2005
-in the form of a dark depression, an existential crisis.
-And while I don't have the time to share the details,
-I can tell you that in deep meditation and crying my eyes out before God,
-I had a near-deathlike, out-of-body, experience that rocked my world,
-including a life review on the other side,
-where I understood in a flash how my choices shaped my present life.
-I got it that we are the ones
-that should choose who we will be in this lifetime.
-And we are meant to express ourselves fully,
-and we are all so totally lovable.
-In those moments, I experienced the most pure, absolute love
-for myself and for everything in humanity.
-Following that, I dove into the research of near-death experiences,
-the neuroscience of consciousness,
-and even the link between quantum physics and how we manifest our deepest desires.
-And no matter which perspective appeals to you,
-it all boils down to this:
-authentic happiness and total wellness are your natural birthrights.
-You have a unique purpose to fulfill in this lifetime,
-even when your role seems small.
-So, your second key to transforming your dreams into reality
-is to love who you are.
-From there you can revive the true self,
-rewrite your self-description,
-and rebuild the living temple of your authentic self.
-Positive psychology research and and my own experience
-shows that there's nothing short of miracles
-that are available to each and every one of us.
-From overcoming depression, bouncing back after chemotherapy and cancer,
-to revolutionary new business ideas,
-the possibilities are endless.
-How will you use your potential?
-Ghandi said we must be the change we wish to see in the world.
-So it's no surprise that your third key is to live who you really are.
-Uncover your dreams and your passions,
-and share them with the world;
-your ideas, your voice, but most importantly your presence,
-because you are a gift to the world.
-So there you have it.
-There is my one small idea:
-Become who you really are.
-First learn that you are more than your body;
-you are not the monkey mind.
-You are more than a present illness or a number on a scale,
-you're more than your past success or failures.
-You are an infinite being,
-full of potential to make a difference in this life,
+that make you unique, feel engaged, and actually make you feel like
+life is worth living. You can learn about your character strengths by
+taking the VIA survey. This was developed under the guidance of Dr
+Martin Seligman. While studying applied positive psychology, he taught
+me that when we use our signature strengths more in our daily life, we
+can achieve authentic happiness, create more flow, and a feeling that
+what we do in life matters.
+
+When you feel that life has meaning and purpose, you take your better
+care of yourself. You will express yourself more freely, and ... you
+really start to feel happy and hopeful. And these positive emotions
+and optimism go a long way towards setting you up for success, better
+health and longevity. In fact, a Dutch men's study found that optimism
+alone could decrease all types of mortality and, in particular, death
+from heart disease, as did the Women's Health Initiative.
+
+So, this type of optimism is critical. I can tell you from personal
+experience that denying your self-expression can actually lead to
+depression. For most of my life, I have traveled two parallel paths.
+By training I am a scientist, but by passion I'm an artist. My mother
+encouraged me to boldly go onstage on television and to play music.
+But it wasn't that she pushed me into the arts, it was our home
+environment that shaped my decision. Children ought to be seen, not
+heard.
+
+This was one of those leftover Victorian ideals from England, where my
+mother grew up. But when I was on stage, I felt free to finally
+express myself. And by performing, I could naturally get into the zone
+and that flow state. Now, my father's influence was equally
+impressive. He told me that only one in a million artists can make it
+in the world so go to school and get an education. I wanted to keep my
+father happy, so I sacrificed my biggest passion for performing to
+become a doctor. And, for the most part, I was miserable.
+
+So what if the way you've molded yourself, or allowed others to shape
+you, was based on false information? If you're always trying to be
+normal, you'll never know how amazing you can be. And may she rest in
+peace. During the first ten years of my medical practice, I discovered
+that no matter how many acupuncture needles, medications, surgeries,
+or even psychotherapy given, some people just wouldn't get better. Or
+worse, they'd get better, and then come down with some other illness
+or addiction.
+
+When I asked why and probed deeper, I discovered that some of them
+didn't love and accept themselves. They didn't value their lives, and
+they didn't even feel that they deserved good health and happiness.
+Somehow that felt very familiar to me. When we are coerced to be
+something that we are not, or forced to pursue goals that are not of
+our own choosing, we often take on the beliefs of others that can
+literally cause our own self-rejection and self-loathing.
+
+Now I did use my on-camera skills to work successfully with some of
+the largest media brands in the world. But the persona that we created
+was not authentically aligned with who I really was. I didn't feel
+comfortable with my pseudocelebrity status, and I even started to hide
+some of my success because I hated the image that we created. I also
+hid my sadness, smiling on the cover of magazines and doing talk-show
+interviews, I wore a happy mask ... while internally I suffered.
+
+Now, that subset of patients that lacked self-love was actually a
+mirror to what I was experiencing. When we don't utilize or live up to
+our full potential, we risk becoming hopeless and depressed. We may be
+functional, but not fulfilled; we may be successful, but not
+satisfied. To numb our pain we often overeat, overdrink, overachieve
+or shop. But we're not the only ones who suffer in that scenario.
+
+We have a profound impact on the people around us, our co-workers, our
+romantic partners and especially our children. The very ones who could
+and should benefit from our unique gifts are deprived of the beauty of
+our talents. Takes a lot of courage to grow up and become who you
+really are. This sort of practiced conformity can make it very
+difficult, and even scary, to live your truth. Often we're paralyzed
+by fear, or so racked with pain, that we feel like we just can't go
+on. And that's what happened in my case.
+
+Now, I don't recommend it, but hitting rock bottom can be a blessing
+in disguise. Our very own downfall can propel us to new heights of
+self-expression and self-acceptance. For me, my rock bottom came in
+2005 in the form of a dark depression, an existential crisis. And
+while I don't have the time to share the details, I can tell you that
+in deep meditation and crying my eyes out before God, I had a
+near-deathlike, out-of-body, experience that rocked my world,
+including a life review on the other side, where I understood in a
+flash how my choices shaped my present life.
+
+I got it that we are the ones that should choose who we will be in
+this lifetime. And we are meant to express ourselves fully, and we are
+all so totally lovable. In those moments, I experienced the most pure,
+absolute love for myself and for everything in humanity. Following
+that, I dove into the research of near-death experiences, the
+neuroscience of consciousness, and even the link between quantum
+physics and how we manifest our deepest desires.
+
+And no matter which perspective appeals to you, it all boils down to
+this: authentic happiness and total wellness are your natural
+birthrights.
+
+You have a unique purpose to fulfill in this lifetime, even when your
+role seems small. So, your second key to transforming your dreams into
+reality is to love who you are. From there you can revive the true
+self, rewrite your self-description, and rebuild the living temple of
+your authentic self. Positive psychology research and and my own
+experience shows that there's nothing short of miracles that are
+available to each and every one of us.
+
+From overcoming depression, bouncing back after chemotherapy and
+cancer, to revolutionary new business ideas, the possibilities are
+endless. How will you use your potential? Ghandi said we must be the
+change we wish to see in the world. So it's no surprise that your
+third key is to live who you really are. Uncover your dreams and your
+passions, and share them with the world; your ideas, your voice, but
+most importantly your presence, because you are a gift to the world.
+
+So there you have it. There is my one small idea: Become who you
+really are. First learn that you are more than your body; you are not
+the monkey mind. You are more than a present illness or a number on a
+scale, you're more than your past success or failures. You are an
+infinite being, full of potential to make a difference in this life,
 starting with your own.
-Love yourself, accept yourself flaws and all,
-shine a light on your shadowy parts to integrate and heal them,
-embrace your strengths and celebrate your uniqueness.
-You are lovable just as you are.
-And, finally, live who you really are.
-You've heard it: use your talents and your ideas in service to others.
-Because we need you, the world is depending upon it.
-I will leave you with this:
-be yourself ...
-because an original is always worth more than a copy.
-And that's my idea worth spreading.
-Thank you.
-(Applause)
+
+Love yourself, accept yourself flaws and all, shine a light on your
+shadowy parts to integrate and heal them, embrace your strengths and
+celebrate your uniqueness. You are lovable just as you are. And,
+finally, live who you really are. You've heard it: use your talents
+and your ideas in service to others. Because we need you, the world is
+depending upon it. I will leave you with this: be yourself ... because
+an original is always worth more than a copy. And that's my idea worth
+spreading. Thank you. (Applause)
