--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -1389,15 +1389,56 @@ tags: [book, template]
    #+END_SRC
 
 
-*** Further exploration
 
-*** Zero, One and a Symbol
+** Zero and One
+
+   #+NAME: zero_and_one
+   #+BEGIN_SRC python :noweb yes :tangle tests/test_06_zero_and_one.py
+     """Initial numerical values testing.
+     """
+
+     import unittest
+
+     """Lets check 0 and 1 up against already known innate Python values
+     with already known testing methods"""
+
+
+     class TestPrimaryNumericFeatures(unittest.TestCase):
+         """Zero and one are pertinent innate numeric objects to test it up
+
+         """
+
+         def test_zero_main_properties(self):
+             self.assertFalse(0) # <-- numeric zero also is Boolean False
+             self.assertIsNotNone(0) # and it is not None!
+             self.assertEqual(0, 0) # equality assertion by the method
+             self.assertTrue(0 == 0) # true statement assertion
+
+
+         def test_one_main_properties(self):
+             self.assertTrue(1) # numeric one is also Boolean True
+             self.assertIsNotNone(1) # and it is not None!
+             self.assertEqual(1, 1) # equality assertion by the method
+             self.assertTrue(1 == 1) # true statement assertion
+
+         def test_compare_one_and_zero(self):
+             self.assertNotEqual(0, 1) # as expected 
+             self.assertFalse(0 == 1) # no comments
+             self.assertTrue(0 < 1) # a new comparison operator 'less'
+             self.assertTrue(1 > 0) # a new operator 'greater than'
+             self.assertTrue(0 <= 1) # 'less than or equal' operator
+             self.assertTrue(1 >= 0) # 'greater than or equal' operator
+
+   #+END_SRC
+
+** A Symbol and a String
 
 
 **** Assertion and assignment
-**** True, False, None, == and = comparison, != and Not
+
 
 **** Boolean operations
+
 
 **** Arithmetics
 
